--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.27.2",
     "babel-plugin-inline-import": "^3.0.0",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
@@ -32,9 +34,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "sharp-cli": "^1.15.0"
   },
