--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "0.29.4",
     "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
