--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "expo-web-browser": "~10.1.0",
     "firebase": "9.4.1",
     "react": "17.0.1",
